Lendo as configs do appsettings e carregando dentro da model de configuracao do MongoDB

--- a/DriversAppApi/appsettings.json
+++ b/DriversAppApi/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "DriversApp",
+    "CollectionName": "Drivers"
+  }
 }
